--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -50,3 +50,4 @@ sources:
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCQnCVVUN-9ylqNYeAU7kONA
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCtHSpYB1aAALN0i1_jA8b0g
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UClE-TPA5ccYSdCybdKJXa7w
+  - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCR0fM5_ERQiF3x84hX7nqtQ
