--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -42,7 +42,7 @@ sources:
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCfLtFVqkGB-9IJaaP7au_wA
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCvOUtcz7gP8f_5pb7VBHjWQ
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCNLLpXJYuECFdvoB1aCRCIQ
-  - href: https://cdn.mysitemapgenerator.com/shareapi/rss/1306571632
+  - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCm7gTGpk4KP6LprBsenCKyQ
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCNWRLlncg_Ad8IRQflHbmcQ
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCFrwp1a2HW0EohxF5jrv75A
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCl6UjHM4zrkbGamI_7t_k2Q
