--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -51,3 +51,5 @@ sources:
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCtHSpYB1aAALN0i1_jA8b0g
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UClE-TPA5ccYSdCybdKJXa7w
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCR0fM5_ERQiF3x84hX7nqtQ
+  - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCEAcjAPXNesAnhgNT1VrOwA
+  - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCMcs15fo3W8VZS2f6COk3vQ
