--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -53,3 +53,4 @@ sources:
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCR0fM5_ERQiF3x84hX7nqtQ
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCEAcjAPXNesAnhgNT1VrOwA
   - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCMcs15fo3W8VZS2f6COk3vQ
+  - href: https://www.youtube.com/feeds/videos.xml?channel_id=UCd9Cu_1ToDU829dfu9DMSzA
